--- a/Frontend/src/styles/variables.css
+++ b/Frontend/src/styles/variables.css
@@ -1,4 +1,4 @@
 :root {
-    --main-color: 258, 74%, 60%;
-    --dashboard-bg: 0, 0%, 95%; 
+    --main-color: 210, 100%, 20%;
+    --homepage-bg: 0, 0%, 95%; 
 }
